[NEW] Add documentation, license, gitignore, and fix URL deprecation